fix: use css variables for spacing, update story

--- a/packages/components/src/components/progress-bar/progress-bar.css
+++ b/packages/components/src/components/progress-bar/progress-bar.css
@@ -10,14 +10,17 @@
  */
 
 :host {
+  --background: var(--telekom-color-primary-standard);
+  --background-color: var(--telekom-color-ui-faint);
   --color-error: var(--telekom-color-text-and-icon-functional-danger);
   --background-error: var(--telekom-color-functional-danger-subtle);
   --color-success: var(--telekom-color-text-and-icon-functional-success);
   --color-disabled: var(--telekom-color-text-and-icon-disabled);
-  --background: var(--telekom-color-primary-standard);
-  --background-color: var(--telekom-color-ui-faint);
-  --color-inner-status: var(--telekom-color-primary-standard);
+  --progress-bar-outer-size: var(--telekom-spacing-unit-x2);
+  --progress-bar-inner-size: var(--telekom-spacing-unit-x1);
+  --progress-bar-status-padding: 0 var(--telekom-spacing-unit-x3);  
   --font-label: var(--telekom-text-style-ui);
+  --color-inner-status: var(--telekom-color-primary-standard);
   --font-size-inner-status: var(--telekom-typography-font-size-small);
   --font-size-status: var(--telekom-typography-font-size-small);
   --font-weight-status: var(--telekom-typography-font-weight-extra-bold);
@@ -25,7 +28,7 @@
   --color-status-description: var(--telekom-color-text-and-icon-additional);
   --font-size-status-description: var(--telekom-typography-font-size-small);
   --font-weight-status-description: var(--telekom-typography-font-weight-bold);
-  --spacing: 6px 0;
+  --spacing: 6px;
 }
 
 .progress-bar {
@@ -50,7 +53,7 @@
 
 .progress-bar__label {
   display: block;
-  padding: var(--spacing);
+  padding: var(--spacing) 0;
   font: var(--font-label);
 }
 
@@ -59,13 +62,13 @@
   display: flex;
   box-sizing: border-box;
   align-items: center;
-  margin-right: 6px;
+  margin-right: var(--spacing);
 }
 
 .progress-bar__outer {
   width: 100%;
-  height: var(--telekom-spacing-unit-x2);
-  margin: var(--spacing);
+  height: var(--progress-bar-outer-size);
+  margin: var(--spacing) 0;
   margin-left: 0;
   overflow: hidden;
   position: relative;
@@ -76,7 +79,7 @@
 .progress-bar__inner {
   top: 0;
   left: 0;
-  height: var(--telekom-spacing-unit-x1);
+  height: var(--progress-bar-inner-size);
   display: flex;
   position: absolute;
   align-items: center;
@@ -89,7 +92,7 @@
 
 .progress-bar__inner-status {
   color: var(--color-inner-status);
-  padding: 0 12px;
+  padding: var(--progress-bar-status-padding);
   font-size: var(--font-size-inner-status);
   font-variant-numeric: tabular-nums;
 }
